--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .orange-color {
-    color: orangered;
+    color: tomato;
 }
 
 h1 {
@@ -25,7 +25,11 @@ h3 {
 
 .images {
     width: 80%;
-    padding-left: 2%;
+    padding-left: 3%;
+}
+
+.down {
+    margin-top: 20px;
 }
 
 
@@ -50,12 +54,17 @@ h3 {
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+}
+
+.door {
+    padding-bottom: 15px;
 }
 
 .link-button {
     text-decoration: none;
     background-image: linear-gradient(tomato, green);
+    color: white;
     padding: 10px 40px;
     border-radius: 10px;
 }
